fix arrow overflow

--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ nav li {
 } */
 #home {
     margin-top: 4.1rem;
-    height: 84vh;
+    height: 81.5vh;
     display: flex;
     justify-content: space-around;
     padding-top: 8%;
